--- a/src/polls/templates/polls/books1.html
+++ b/src/polls/templates/polls/books1.html
@@ -1,13 +1,12 @@
-    
- <div class="container">
+<div class="container">
       <div class="starter-template">
         <h1>Your choice: Books, Level 1</h1>
-      </div>
+        </div>
 	 <h2>Try to translate this sentence to Spanish:</h2>
          <h3> <b>  {{ r }} </b></h3>   
 </div>
 
-<form name="form" method="post" action="">
+<form name="form" method="post" action="" autocomplete="off">
  <div class="container">
       <div class="starter-template">
               <h3>  {% csrf_token %}  {{ form.as_p}} </h3>
@@ -22,11 +21,7 @@
 	 <h3> <b> {{ t }} </b></h3>
      </div>
 </div>
+
+
+<li><a href='{% url "index" %}'> Back to main menu</a></li>
    
-
- 
-  
-    
-    
-    
-
