--- a/src/polls/templates/polls/movies3.html
+++ b/src/polls/templates/polls/movies3.html
@@ -1,14 +1,27 @@
-    
-      <div class="container">
-
+     <div class="container">
       <div class="starter-template">
         <h1>Your choice: Movies, Level 3</h1>
-        <p class="lead"> We are working on this page</p>
+    </div>
+	 <h2>Try to translate this sentence to Spanish:</h2>
+         <h3> <b>  {{ r }} </b></h3>   
+</div>
+
+<form name="form" method="post" action="" autocomplete="off">
+ <div class="container">
+      <div class="starter-template">
+              <h3>  {% csrf_token %}  {{ form.as_p}} </h3>
+ 	<input type="submit" class="btn btn-success btn-md">  <!--  <input type="text"> -->
       </div>
-      
-    
-    </div><!-- /.container -->
-    
+ </div>
+</form>
+
+
+<div class="container">
+      <div class="starter-template">
+	 <h3> <b> {{ t }} </b></h3>
+     </div>
+</div>
     
     
 
+<li><a href='{% url "index" %}'> Back to main menu</a></li>
