deleted unnecessary files (dumps, etc)

--- a/src/polls/templates/polls/translate.html
+++ b/src/polls/templates/polls/translate.html
@@ -1,68 +1,16 @@
  <html>
  <head> 
-<!--{% load staticfiles %}
+{% load staticfiles %}
+
 <link rel="stylesheet" type="text/css" href= "{% static "polls/bootstrap_min.css" }" /> -->
 
 <!-- CSS -->
-<style>
-body {
-    text-align:center;
-    background:WhiteSmoke;
-}
-h1 {
-    color: maroon;
-    margin-left: 40px;
-}
+<link type="text/css" rel="stylesheet" href="{% static 'css/stylesheet_translate.css' %}"></link>
 
-h3 {
-    margin-left: 40px;
-    font-family: Gill Sans Extrabold, sans-serif;
-}
+<!-- <style> -->
 
-li { 
-text-align: center; 
-}
 
-div { 
-text-align: center;
-}
-
-}
-.fancy {
-  width: 500px;
-  margin: 20px auto;
-  padding: 50px;
-  border-width: 10px;
-}
-
-.simple {
-  width: 500px;
-  margin: 20px auto;
-  padding: 10px;
-  border-width: 10px;
-}
-
-p {
-font-family: Gill Sans Extrabold, sans-serif;
-display:inline;
-}
-
-table, th, td {
-font-family: Gill Sans Extrabold, sans-serif;
-text-align: left;
-}
-
-table.center {
-    margin-left:auto; 
-    margin-right:auto;
-  }
-
-.highlight {-moz-text-decoration-line: underline;
-  -moz-text-decoration-style: wavy;
-  -moz-text-decoration-color: red; }
-  
-
-</style>
+<!-- </style> -->
 <!-- end CSS -->
 
 
