--- a/src/polls/templates/polls/index.html
+++ b/src/polls/templates/polls/index.html
@@ -1,28 +1,216 @@
-<h1> Welcome to Ve Language Learning Project</h1>
-<h2> Choose your field of interest </h2>
+<!DOCTYPE html>
 
-</br>    
-<li><a href='{% url "about_us" %}'> About us</a></li>
-</br>
+{% load staticfiles %}
 
-<li><a href='{% url "general1" %}'> General (Mixed Context), Level 1</a></li>
-<li><a href='{% url "general2" %}'> General (Mixed Context), Level 2</a></li>
-<li><a href='{% url "general3" %}'> General (Mixed Context), Level 3</a></li>
-
-</br>    
-
-<li><a href='{% url "translate" %}'> Books, Level 1</a></li>
-<li><a href='{% url "books2" %}'> Books, Level 2</a></li>
-<li><a href='{% url "books3" %}'> Books, Level 3</a></li>
-
-</br>    
-
-<li><a href='{% url "movies1" %}'> Movies, Level 1</a></li>
-<li><a href='{% url "movies2" %}'> Movies, Level 2</a></li>
-<li><a href='{% url "movies3" %}'> Movies, Level 3</a></li>
-
-</br>    
-
-<li><a href='{% url "legaltexts1" %}'> Legal Texts, Level 1</a></li>
-<li><a href='{% url "legaltexts2" %}'> Legal Texts, Level 2</a></li>
-<li><a href='{% url "legaltexts3" %}'> Legal Texts, Level 3</a></li>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
+        <title>
+            Vé
+        </title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"></link>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"></link>
+        <link href="//brick.a.ssl.fastly.net/Linux+Libertine:400,600,700,400i,600i,700i/Roboto:300,400,300i,400i" rel="stylesheet"></link>
+        <link type="text/css" rel="stylesheet" href="{% static 'css/stylesheet.css' %}"></link>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    </head>
+    
+    <body>
+        <div class="page-wrap">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <nav class="clearfix" role="navigation">
+                            <div class="col-md-6">
+                                <div class="logo">
+                                    <a href="/">
+                                            Vé
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <ul>
+                                    <li>
+                                        <a href="/ve/">
+                                            About Vé
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href='{% url "about_us" %}'>
+                                            About us
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <section id="intro">
+                    <div class="row">
+                        <div class="col-md-10">
+                            <h2>
+                                Learning by Translating
+                            </h2>
+                            <p>
+                                Vé is an alternative to learn Spanish by translating. Choose your field of interest, your level and begin Learning by Translating.
+                            </p>
+                        </div>
+                    </div>
+                </section>
+                <section id="spanish">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h2>
+                                Learn Spanish
+                            </h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 spanish">
+                            <div class="box">
+                                <p class="genre">
+                                    Movies
+                                </p>
+                                <div class="inside-box">
+                                    <a href='{% url "movies1" %}'>
+                                        <div class="circle">
+                                            <p>
+                                                Level 1
+                                            </p>
+                                        </div>
+                                    </a>
+                                    <a href='{% url "movies2" %}'>
+                                        <div class="circle">
+                                            <p>
+                                                Level 2
+                                            </p>
+                                        </div>
+                                    </a>
+                                    <a href='{% url "movies3" %}'>
+                                        <div class="circle">
+                                            <p>
+                                                Level 3
+                                            </p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 spanish">
+                            <div class="box">
+                                <p class="genre">
+                                    Books
+                                </p>
+                                <div class="inside-box">
+                                    <a href='{% url "translate" %}'>
+                                        <div class="circle">
+                                            <p>
+                                                Level 1
+                                            </p>
+                                        </div>
+                                    </a>
+                                    <a href='{% url "books2" %}'>
+                                        <div class="circle">
+                                            <p>
+                                                Level 2
+                                            </p>
+                                        </div>
+                                    </a>
+                                    <a href='{% url "books3" %}'>
+                                        <div class="circle">
+                                            <p>
+                                                Level 3
+                                            </p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 spanish">
+                            <div class="box">
+                                <p class="genre">
+                                    Legal texts
+                                </p>
+                                <div class="inside-box">
+                                    <a href='{% url "legaltexts1" %}'>
+                                        <div class="circle">
+                                            <p>
+                                                Level 1
+                                            </p>
+                                        </div>
+                                    </a>
+                                    <a href='{% url "legaltexts2" %}'>
+                                        <div class="circle">
+                                            <p>
+                                                Level 2
+                                            </p>
+                                        </div>
+                                    </a>
+                                    <a href='{% url "legaltexts3" %}'>
+                                        <div class="circle">
+                                            <p>
+                                                Level 3
+                                            </p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 spanish">
+                            <div class="box">
+                                <p class="genre">
+                                    General conversations
+                                </p>
+                                <div class="inside-box" id="general">
+                                    <a href='{% url "general1" %}'>
+                                        <div class="circle">
+                                            <p>
+                                                Level 1
+                                            </p>
+                                        </div>
+                                    </a>
+                                    <a href='{% url "general2" %}'>
+                                        <div class="circle">
+                                            <p>
+                                                Level 2
+                                            </p>
+                                        </div>
+                                    </a>
+                                    <a href='{% url "general3" %}'>
+                                        <div class="circle">
+                                            <p>
+                                                Level 3
+                                            </p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p id="copyright">
+                            © Letr 2014
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <p id="contact">
+                            <a href="mailto:fleuen@gmx.ch">
+                                Contact us
+                            </a>
+                        </p>
+                    </div>
+                </div>  
+            </div>
+        </footer>
+    </body>
+</html>
